--- a/src/components/CardProductApp.css
+++ b/src/components/CardProductApp.css
@@ -1,17 +1,16 @@
 #ContenedorCards1{
     height: 1200px;  
-    margin-top: 20px;
     display: flex;
-    flex-wrap: wrap;
     align-items:flex-start;
     justify-content: center;
 }
 #ContenedorCards2{
-    height: 100%;  
-    margin-top: 20px;
+    height: 90%;  
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
-    align-items:self-end;
+    align-items:center;
     justify-content: center;
 }
 
@@ -52,13 +51,21 @@
     padding: 0.6rem 0.6rem;
     font-size: 0.8rem;
 }
-
 .btn{
     font-size: 0.7rem;
 }
 
 #paginacion{
+
     margin-right: 10px;
-    display:inline-flex;
+    display:inline-block;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+    margin-left: 10px;
+}
+h5{
+    color: white;
+}
