--- a/src/css/LoginScreen.css
+++ b/src/css/LoginScreen.css
@@ -1,4 +1,5 @@
 .container {
+    padding: 2%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,9 +9,8 @@
   .card {
     width: 50%;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    
+    transform: translate(-50%, -0%);
     background: #777272;
     padding: 3% 3%;
   }
