agregando login en los combres de las clases de css

--- a/src/css/LoginScreen.css
+++ b/src/css/LoginScreen.css
@@ -1,4 +1,4 @@
-.container {
+.login-container {
     padding: 2%;
     display: flex;
     align-items: center;
@@ -6,7 +6,7 @@
     height: 100%;
   }
   
-  .card {
+  .login-card {
     width: 50%;
     position: fixed;
     
