--- a/src/css/CardProductApp.css
+++ b/src/css/CardProductApp.css
@@ -1,7 +1,7 @@
 
 
 #ContenedorCards1{
-    height: 1200px;  
+    /* height: 1200px;   */
     display: flex;
     align-items:flex-start;
     justify-content: center;
@@ -62,7 +62,7 @@
 }
 
 #paginacion{
-
+  
     margin-right: 10px;
     display:inline-block;
 }
@@ -70,13 +70,13 @@
 h5{
     color: white;
 }
-             /* Texto negro en hover */
+            
              .custom-highlight {
-                color: #ffffff;           /* Texto blanco */
-                background-color: #007bff; /* Fondo azul */
-                border-radius: 50%;       /* Borde redondeado opcional */
-                padding: 5px 10px;        /* Espaciado interno */
-                font-weight: bold;        /* Texto en negrita */
+                color: #ffffff;          
+                background-color: #007bff; 
+                border-radius: 50%;       
+                padding: 5px 10px;     
+                font-weight: bold;        
               }
               
               /* Estilo para los números de páginas distintas a la actual */
