--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,3 +1,15 @@
+.footer-section{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.footer-section container{
+  width: 100vw;
+  /* padding: 100px 0 100px 0; */
+}
+
 .footerlist ul {
   margin: 0px;
   padding: 0px;
