--- a/src/css/adminPage.css
+++ b/src/css/adminPage.css
@@ -1,16 +1,18 @@
+#root {
+  /* max-width: 1280px; */
+  margin: 0 auto;
+  text-align: center;
+}
+
 /* Estilos generales */
 body {
   margin: 0;
   background-color: #f8f9fa;
   font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 .logo {
   height: 6em;
