--- a/src/css/header.css
+++ b/src/css/header.css
@@ -21,12 +21,16 @@
   
   /* Logo */
   .logo {
-    height: 40px;
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
   
   .logo img {
-    height: 100%;
     width: auto;
+    height: 30px; 
+    /* display: block; */
+    border-radius: 5px;
   }
   
   /* Search Bar */
