--- a/src/css/CardProductApp.css
+++ b/src/css/CardProductApp.css
@@ -1,16 +1,27 @@
-#ContenedorCards1 {
-    /* height: 1200px;   */
+
+.conteinerCardd{
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+      
+}
+
+#ContenedorCards1 {
+    height: 1200px;   
+    display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
-    
 }
 
 #ContenedorCards2 {
-    /* height: 90%; */
+    height: 90%;
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
     padding: 15px;
     border-radius: 10px;
@@ -18,19 +29,16 @@
     justify-content: center;
 }
 
-.conteiner_card {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-top:12px ;
-}
-
 .card {
-    width: 180px;
+    max-width: 190px;
     height: 220px;
     object-fit: cover;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1px;
+
 }
 
 .card:hover {
