--- a/src/css/adminPage.css
+++ b/src/css/adminPage.css
@@ -8,11 +8,10 @@
 body {
   margin: 0;
   background-color: #f8f9fa;
-  font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+  font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
   width: 100%;
   height: 100%;
 }
-
 
 .logo {
   height: 6em;
